feat: Refactor sales and services, remove old sales structure
The `Sale` and `ServiceProvision` types have been significantly refactored to better represent the complexity of sales transactions, including multiple items, payment methods, and discounts.

The `SalesPage` component has been updated to reflect these changes, including the generation of PDF invoices and a more robust data structure for sales.

The `ServicesPage` component has been removed as its functionality is now integrated into the broader sales and product management. The `Service` type remains, but its direct management via a dedicated page is no longer necessary.

The navigation and data constants have been updated to align with these structural changes.

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,9 +20,8 @@
     "dashboard": "Dashboard",
     "employee": "Employee",
     "clients": "Clients",
-    "sales": "Sales",
+    "sales": "POS",
     "products": "Products",
-    "services": "Services",
     "company": "Company",
     "profile": "Profile",
     "reports": "Reports",
@@ -118,56 +117,56 @@
     "zipCode": "ZIP Code"
   },
   "sales": {
-    "title": "Sales and Services Provided",
-    "registerNew": "Register New Sale / Service",
-    "formDescription": "Form to register new sales and services.",
+    "title": "POS - Point of Sale",
     "history": "Sales History",
     "item": "Item",
-    "quantity": "Quantity",
+    "items": "Items",
+    "quantity": "Qty",
     "total": "Total",
+    "subtotal": "Subtotal",
     "date": "Date",
     "client": "Client",
     "clientLabel": "Client",
     "invoice": "Invoice",
-    "clientTypeCompany": "Company",
-    "clientTypeConsumer": "Regular Consumer",
-    "generateReports": "Generate JSON Reports",
-    "generateDaily": "Generate Daily JSON",
-    "generateMonthly": "Generate Monthly JSON",
-    "generateYearly": "Generate Yearly JSON",
-    "reportNote": "The monthly button is only enabled on the last day of the month. The yearly one, on the last day of the year. The daily one is always available for day-end closing.",
-    "registerNewSale": "Register New Sale",
-    "registerNewClient": "New Client",
-    "searchClientPlaceholder": "Search for client by name, CPF/CNPJ...",
-    "addSale": "Add Sale",
-    "editSale": "Edit Sale",
+    "clientTypeConsumer": "Final Consumer",
     "deleteConfirm": "Are you sure you want to delete this sale?",
-    "selectItem": "Select or search for an item",
-    "filterStartDate": "Start Date",
-    "filterEndDate": "End Date",
-    "filterItemType": "Item Type",
-    "filterAllItems": "All Items",
-    "filterProducts": "Products",
-    "filterServices": "Services",
-    "clearFilters": "Clear Filters",
-    "noResults": "No sales found matching your criteria.",
-    "searchItemPlaceholder": "Search for product/service by name...",
-    "registerNewProduct": "New Product",
-    "registerNewService": "New Service",
-    "addNewItem": "Add New Item",
-    "itemName": "Item Name",
-    "itemPrice": "Price",
-    "itemType": "Item Type",
+    "searchPlaceholder": "Search by name or code...",
     "addSuccess": "Sale registered successfully!",
     "updateSuccess": "Sale updated successfully!",
-    "deleteSuccess": "Sale deleted successfully!"
+    "deleteSuccess": "Sale deleted successfully!",
+    "currentSale": "Current Sale",
+    "saleHistory": "History",
+    "emptyCart": "The cart is empty.",
+    "cancelSale": "Cancel Sale",
+    "finalizePayment": "Payment",
+    "totalPayable": "Total Payable",
+    "remaining": "Remaining",
+    "changeDue": "Change",
+    "paymentMethod": "Payment Method",
+    "cash": "Cash",
+    "debitcard": "Debit Card",
+    "creditcard": "Credit Card",
+    "pix": "Pix",
+    "onaccount": "On Account",
+    "paymentsMade": "Payments Made",
+    "amountTendered": "Amount Tendered",
+    "clientRequiredForOnAccount": "A client must be selected for 'On Account' sales.",
+    "paymentNotCovered": "The amount paid is less than the sale total.",
+    "emptyCartError": "The cart is empty. Please add items before proceeding.",
+    "cancelSaleConfirm": "Are you sure you want to cancel the current sale? All items will be removed.",
+    "saleCanceled": "Sale canceled.",
+    "saleCompleted": "Sale completed successfully!",
+    "receiptPrompt": "Do you want to print the receipt?",
+    "printReceipt": "Print Receipt",
+    "nonFiscalDocument": "Non-fiscal document"
   },
   "products": {
+    "title": "Products",
     "sku": "SKU / Code",
     "productName": "Product Name",
     "price": "Sale Price",
     "actions": "Actions",
-    "addNew": "Add New Product",
+    "addNew": "Add Item",
     "resaleProducts": "Resale Products",
     "industrializedProducts": "Industrialized Products",
     "deleteConfirm": "Are you sure you want to delete this product?",
@@ -188,32 +187,18 @@
     "currentStock": "Current Stock"
   },
   "services": {
-    "serviceRegistry": "Service Registry",
+    "serviceRegistry": "Services",
     "serviceName": "Service Name",
     "price": "Price",
     "actions": "Actions",
     "addNew": "Add New Service",
-    "serviceProvision": "Service Provision",
-    "formDescription": "Form to record a service rendered. Similar to sales.",
     "deleteConfirm": "Are you sure you want to delete this service?",
     "addService": "Add New Service",
     "editService": "Edit Service",
     "noServices": "No services registered.",
-    "editJustificationPrompt": "Please provide a justification for editing this service.",
-    "provisionHistory": "Service Provision History",
-    "registerProvision": "Register Service Provision",
-    "editProvision": "Edit Service Provision",
-    "deleteProvisionConfirm": "Are you sure you want to delete this service provision?",
-    "noProvisions": "No service provisions registered.",
-    "selectService": "Select a service",
-    "editProvisionJustificationPrompt": "Please provide a justification for editing this service provision.",
-    "searchServicePlaceholder": "Search for service by name...",
     "addSuccess": "Service added successfully!",
     "updateSuccess": "Service updated successfully!",
-    "deleteSuccess": "Service deleted successfully!",
-    "addProvisionSuccess": "Service provision registered successfully!",
-    "updateProvisionSuccess": "Service provision updated successfully!",
-    "deleteProvisionSuccess": "Service provision deleted successfully!"
+    "deleteSuccess": "Service deleted successfully!"
   },
   "company": {
     "registrationInfo": "Registration Information",
