--- a/locales/pt.json
+++ b/locales/pt.json
@@ -20,9 +20,8 @@
     "dashboard": "Dashboard",
     "employee": "Funcionário",
     "clients": "Clientes",
-    "sales": "Vendas",
+    "sales": "PDV",
     "products": "Produtos",
-    "services": "Serviços",
     "company": "Empresa",
     "profile": "Perfil",
     "reports": "Relatório",
@@ -118,56 +117,56 @@
     "zipCode": "CEP"
   },
   "sales": {
-    "title": "Vendas e Serviços Prestados",
-    "registerNew": "Registrar Nova Venda / Serviço",
-    "formDescription": "Formulário de cadastro de novas vendas e serviços.",
+    "title": "PDV - Ponto de Venda",
     "history": "Histórico de Vendas",
     "item": "Item",
-    "quantity": "Quantidade",
+    "items": "Itens",
+    "quantity": "Qtd.",
     "total": "Total",
+    "subtotal": "Subtotal",
     "date": "Data",
     "client": "Cliente",
     "clientLabel": "Cliente",
     "invoice": "NF-e",
-    "clientTypeCompany": "Empresa",
-    "clientTypeConsumer": "Consumidor Comum",
-    "generateReports": "Gerar Relatórios JSON",
-    "generateDaily": "Gerar JSON Diário",
-    "generateMonthly": "Gerar JSON Mensal",
-    "generateYearly": "Gerar JSON Anual",
-    "reportNote": "O botão mensal só é habilitado no último dia do mês. O anual, no último dia do ano. O diário está sempre disponível para fechamento do dia.",
-    "registerNewSale": "Registrar Nova Venda",
-    "registerNewClient": "Novo Cliente",
-    "searchClientPlaceholder": "Buscar cliente por nome, CPF/CNPJ...",
-    "addSale": "Adicionar Venda",
-    "editSale": "Alterar Venda",
+    "clientTypeConsumer": "Consumidor Final",
     "deleteConfirm": "Tem certeza que deseja excluir esta venda?",
-    "selectItem": "Selecione ou busque um item",
-    "filterStartDate": "Data Inicial",
-    "filterEndDate": "Data Final",
-    "filterItemType": "Tipo de Item",
-    "filterAllItems": "Todos os Itens",
-    "filterProducts": "Produtos",
-    "filterServices": "Serviços",
-    "clearFilters": "Limpar Filtros",
-    "noResults": "Nenhuma venda encontrada com os seus critérios.",
-    "searchItemPlaceholder": "Buscar produto/serviço por nome...",
-    "registerNewProduct": "Novo Produto",
-    "registerNewService": "Novo Serviço",
-    "addNewItem": "Adicionar Novo Item",
-    "itemName": "Nome do Item",
-    "itemPrice": "Preço",
-    "itemType": "Tipo do Item",
+    "searchPlaceholder": "Buscar por nome ou código...",
     "addSuccess": "Venda registrada com sucesso!",
     "updateSuccess": "Venda atualizada com sucesso!",
-    "deleteSuccess": "Venda excluída com sucesso!"
+    "deleteSuccess": "Venda excluída com sucesso!",
+    "currentSale": "Venda Atual",
+    "saleHistory": "Histórico",
+    "emptyCart": "O carrinho está vazio.",
+    "cancelSale": "Cancelar Venda",
+    "finalizePayment": "Pagamento",
+    "totalPayable": "Total a Pagar",
+    "remaining": "Restante",
+    "changeDue": "Troco",
+    "paymentMethod": "Forma de Pagamento",
+    "cash": "Dinheiro",
+    "debitcard": "Débito",
+    "creditcard": "Crédito",
+    "pix": "Pix",
+    "onaccount": "Fiado",
+    "paymentsMade": "Pagamentos realizados",
+    "amountTendered": "Valor recebido",
+    "clientRequiredForOnAccount": "Um cliente deve ser selecionado para vendas a prazo (fiado).",
+    "paymentNotCovered": "O valor pago é inferior ao total da venda.",
+    "emptyCartError": "O carrinho está vazio. Adicione itens antes de prosseguir.",
+    "cancelSaleConfirm": "Tem certeza que deseja cancelar a venda atual? Todos os itens serão removidos.",
+    "saleCanceled": "Venda cancelada.",
+    "saleCompleted": "Venda finalizada com sucesso!",
+    "receiptPrompt": "Deseja imprimir o recibo?",
+    "printReceipt": "Imprimir Recibo",
+    "nonFiscalDocument": "Documento não fiscal"
   },
   "products": {
+    "title": "Produtos",
     "sku": "SKU / Código",
     "productName": "Nome do Produto",
     "price": "Preço de Venda",
     "actions": "Ações",
-    "addNew": "Adicionar Novo Produto",
+    "addNew": "Adicionar Item",
     "resaleProducts": "Produtos de Revenda",
     "industrializedProducts": "Produtos Industrializados",
     "deleteConfirm": "Tem certeza que deseja excluir este produto?",
@@ -188,32 +187,18 @@
     "currentStock": "Estoque Atual"
   },
   "services": {
-    "serviceRegistry": "Cadastro de Serviços",
+    "serviceRegistry": "Serviços",
     "serviceName": "Nome do Serviço",
     "price": "Preço",
     "actions": "Ações",
     "addNew": "Adicionar Novo Serviço",
-    "serviceProvision": "Prestação de Serviço",
-    "formDescription": "Formulário para registrar a prestação de um serviço. Similar ao de vendas.",
     "deleteConfirm": "Tem certeza que deseja excluir este serviço?",
     "addService": "Adicionar Novo Serviço",
     "editService": "Editar Serviço",
     "noServices": "Nenhum serviço cadastrado.",
-    "editJustificationPrompt": "Por favor, forneça uma justificativa para alterar este serviço.",
-    "provisionHistory": "Histórico de Serviços Prestados",
-    "registerProvision": "Registrar Serviço Prestado",
-    "editProvision": "Alterar Serviço Prestado",
-    "deleteProvisionConfirm": "Tem certeza que deseja excluir esta prestação de serviço?",
-    "noProvisions": "Nenhuma prestação de serviço registrada.",
-    "selectService": "Selecione um serviço",
-    "editProvisionJustificationPrompt": "Por favor, forneça uma justificativa para alterar esta prestação de serviço.",
-    "searchServicePlaceholder": "Buscar serviço por nome...",
     "addSuccess": "Serviço adicionado com sucesso!",
     "updateSuccess": "Serviço atualizado com sucesso!",
-    "deleteSuccess": "Serviço excluído com sucesso!",
-    "addProvisionSuccess": "Prestação de serviço registrada com sucesso!",
-    "updateProvisionSuccess": "Prestação de serviço atualizada com sucesso!",
-    "deleteProvisionSuccess": "Prestação de serviço excluída com sucesso!"
+    "deleteSuccess": "Serviço excluído com sucesso!"
   },
   "company": {
     "registrationInfo": "Informações Cadastrais",
