feat(financial): Add Financial page and types
Introduces a new 'Financial' page to the application and defines types for accounts payable and receivable. This lays the groundwork for managing financial aspects of the business.

--- a/locales/en.json
+++ b/locales/en.json
@@ -22,6 +22,7 @@
     "clients": "Clients",
     "sales": "POS",
     "products": "Products",
+    "financial": "Financial",
     "company": "Company",
     "profile": "Profile",
     "reports": "Reports",
@@ -160,7 +161,10 @@
     "printReceipt": "Print Receipt",
     "nonFiscalDocument": "Non-fiscal document",
     "paymentDetails": "Payment Details",
-    "insufficientStockError": "Insufficient stock for {productName}."
+    "insufficientStockError": "Insufficient stock for {productName}.",
+    "dueDate": "Due Date",
+    "dueDateRequired": "Due date is required for 'On Account' sales.",
+    "onAccountPaymentFor": "On Account payment for {clientName}"
   },
   "products": {
     "title": "Products",
@@ -279,7 +283,23 @@
     "totalRevenue": "Total Revenue",
     "lowStockReportTitle": "Low Stock Report",
     "currentStock": "Current Stock",
-    "minStock": "Minimum Stock"
+    "minStock": "Minimum Stock",
+    "financialReports": "Financial Reports",
+    "financialReportsDescription": "Analyze your business's cash flow and profitability.",
+    "cashFlowReport": "Cash Flow",
+    "cashFlowReportDescription": "View all cash inflows and outflows for a period.",
+    "cashFlowReportTitle": "Cash Flow Report",
+    "profitReport": "Profit & Loss Statement",
+    "profitReportDescription": "Calculate net profit based on revenues, costs, and expenses.",
+    "profitReportTitle": "Profit & Loss Statement",
+    "type": "Type",
+    "inflow": "Inflow",
+    "outflow": "Outflow",
+    "balance": "Balance",
+    "cogs": "Cost of Goods Sold (COGS)",
+    "grossProfit": "Gross Profit",
+    "operatingExpenses": "Operating Expenses",
+    "netProfit": "Net Profit"
   },
   "settings": {
     "general": "General Settings",
@@ -332,5 +352,36 @@
     "shortage": "Shortage",
     "confirmCloseCash": "Confirm Closing",
     "cashClosedSuccess": "Cash register closed successfully!"
+  },
+  "financial": {
+    "title": "Financial Management",
+    "accountsPayable": "Accounts Payable",
+    "accountsReceivable": "Accounts Receivable",
+    "addExpense": "Add Expense",
+    "editExpense": "Edit Expense",
+    "description": "Description",
+    "category": "Category",
+    "amount": "Amount",
+    "dueDate": "Due Date",
+    "paymentDate": "Payment Date",
+    "status": "Status",
+    "pending": "Pending",
+    "paid": "Paid",
+    "totalPayable": "Total Payable",
+    "totalReceivable": "Total Receivable",
+    "balanceForecast": "Balance Forecast",
+    "noPayable": "No accounts payable registered.",
+    "noReceivable": "No accounts receivable registered.",
+    "markAsPaid": "Mark as Paid",
+    "confirmMarkAsPaid": "Confirm payment of this expense?",
+    "paymentSuccess": "Expense marked as paid.",
+    "deleteExpenseConfirm": "Are you sure you want to delete this expense?",
+    "expenseDeleted": "Expense deleted successfully.",
+    "expenseAdded": "Expense added successfully.",
+    "expenseUpdated": "Expense updated successfully.",
+    "registerPayment": "Register Payment",
+    "confirmReceivePayment": "Confirm receipt of this account?",
+    "paymentReceivedSuccess": "Payment registered successfully.",
+    "saleId": "Sale ID"
   }
 }
