--- a/locales/pt.json
+++ b/locales/pt.json
@@ -22,6 +22,7 @@
     "clients": "Clientes",
     "sales": "PDV",
     "products": "Produtos",
+    "financial": "Financeiro",
     "company": "Empresa",
     "profile": "Perfil",
     "reports": "Relatório",
@@ -160,7 +161,10 @@
     "printReceipt": "Imprimir Recibo",
     "nonFiscalDocument": "Documento não fiscal",
     "paymentDetails": "Detalhes do Pagamento",
-    "insufficientStockError": "Estoque insuficiente para {productName}."
+    "insufficientStockError": "Estoque insuficiente para {productName}.",
+    "dueDate": "Data de Vencimento",
+    "dueDateRequired": "A data de vencimento é obrigatória para vendas a prazo.",
+    "onAccountPaymentFor": "Pagamento a prazo para {clientName}"
   },
   "products": {
     "title": "Produtos",
@@ -279,7 +283,23 @@
     "totalRevenue": "Receita Total",
     "lowStockReportTitle": "Relatório de Estoque Baixo",
     "currentStock": "Estoque Atual",
-    "minStock": "Estoque Mínimo"
+    "minStock": "Estoque Mínimo",
+    "financialReports": "Relatórios Financeiros",
+    "financialReportsDescription": "Analise o fluxo de caixa e a lucratividade do seu negócio.",
+    "cashFlowReport": "Fluxo de Caixa",
+    "cashFlowReportDescription": "Visualize todas as entradas e saídas de dinheiro em um período.",
+    "cashFlowReportTitle": "Relatório de Fluxo de Caixa",
+    "profitReport": "Demonstrativo de Lucro",
+    "profitReportDescription": "Calcule o lucro líquido com base nas receitas, custos e despesas.",
+    "profitReportTitle": "Demonstrativo de Lucro",
+    "type": "Tipo",
+    "inflow": "Entrada",
+    "outflow": "Saída",
+    "balance": "Saldo",
+    "cogs": "Custo da Mercadoria Vendida (CMV)",
+    "grossProfit": "Lucro Bruto",
+    "operatingExpenses": "Despesas Operacionais",
+    "netProfit": "Lucro Líquido"
   },
   "settings": {
     "general": "Configurações Gerais",
@@ -332,5 +352,36 @@
     "shortage": "Falta",
     "confirmCloseCash": "Confirmar Fechamento",
     "cashClosedSuccess": "Caixa fechado com sucesso!"
+  },
+  "financial": {
+    "title": "Gestão Financeira",
+    "accountsPayable": "Contas a Pagar",
+    "accountsReceivable": "Contas a Receber",
+    "addExpense": "Adicionar Despesa",
+    "editExpense": "Editar Despesa",
+    "description": "Descrição",
+    "category": "Categoria",
+    "amount": "Valor",
+    "dueDate": "Vencimento",
+    "paymentDate": "Data Pag.",
+    "status": "Status",
+    "pending": "Pendente",
+    "paid": "Pago",
+    "totalPayable": "Total a Pagar",
+    "totalReceivable": "Total a Receber",
+    "balanceForecast": "Saldo Previsto",
+    "noPayable": "Nenhuma conta a pagar registrada.",
+    "noReceivable": "Nenhuma conta a receber registrada.",
+    "markAsPaid": "Marcar como Pago",
+    "confirmMarkAsPaid": "Confirmar pagamento desta despesa?",
+    "paymentSuccess": "Despesa marcada como paga.",
+    "deleteExpenseConfirm": "Tem certeza que deseja excluir esta despesa?",
+    "expenseDeleted": "Despesa excluída com sucesso.",
+    "expenseAdded": "Despesa adicionada com sucesso.",
+    "expenseUpdated": "Despesa atualizada com sucesso.",
+    "registerPayment": "Registrar Recebimento",
+    "confirmReceivePayment": "Confirmar recebimento desta conta?",
+    "paymentReceivedSuccess": "Recebimento registrado com sucesso.",
+    "saleId": "Venda ID"
   }
 }
