--- a/locales/en.json
+++ b/locales/en.json
@@ -1,4 +1,5 @@
 
+
 {
   "common": {
     "saveChanges": "Save Changes",
@@ -51,7 +52,11 @@
     "monthlyBilling": "Monthly Billing",
     "resales": "Resales",
     "industrialized": "Industrialized Prod.",
-    "services": "Services"
+    "services": "Services",
+    "pendingPayable": "Accounts Payable (Pending)",
+    "pendingReceivable": "Accounts Receivable (Pending)",
+    "monthlyExpenses": "Expenses (Month)",
+    "monthlyProfit": "Profit (Month)"
   },
   "employee": {
     "description": "The MEI can have a maximum of one employee. Manage the data here.",
@@ -164,7 +169,18 @@
     "insufficientStockError": "Insufficient stock for {productName}.",
     "dueDate": "Due Date",
     "dueDateRequired": "Due date is required for 'On Account' sales.",
-    "onAccountPaymentFor": "On Account payment for {clientName}"
+    "onAccountPaymentFor": "On Account payment for {clientName}",
+    "filterStartDate": "Start Date",
+    "filterEndDate": "End Date",
+    "cardPaymentTitle": "Card Payment",
+    "cardNumber": "Card Number",
+    "cardHolderName": "Cardholder Name",
+    "expiryDate": "Expiry Date",
+    "cvv": "CVV",
+    "gatewayDisclaimer": "Warning: This is a simulation screen. Do not enter real card details.",
+    "payAmount": "Pay",
+    "processingPayment": "Processing...",
+    "paymentApproved": "Payment Approved!"
   },
   "products": {
     "title": "Products",
@@ -299,7 +315,8 @@
     "cogs": "Cost of Goods Sold (COGS)",
     "grossProfit": "Gross Profit",
     "operatingExpenses": "Operating Expenses",
-    "netProfit": "Net Profit"
+    "netProfit": "Net Profit",
+    "filterByDate": "Filter by Period"
   },
   "settings": {
     "general": "General Settings",
@@ -382,6 +399,10 @@
     "registerPayment": "Register Payment",
     "confirmReceivePayment": "Confirm receipt of this account?",
     "paymentReceivedSuccess": "Payment registered successfully.",
-    "saleId": "Sale ID"
+    "saleId": "Sale ID",
+    "filterByStatus": "Filter by Status",
+    "all": "All",
+    "filterByDate": "Filter by Period",
+    "overdue": "Overdue"
   }
 }
