feat: Add active clients report and dashboard improvements
Introduces a new "Active Clients Report" feature to the Reports page, allowing users to export a list of clients ranked by their purchase value within a specified period.

Additionally, this commit enhances the Dashboard by:
- Adding a `ComparisonBadge` component for displaying month-over-month performance indicators.
- Preparing the dashboard to display metrics like "Average Ticket", "Best Selling Products", and "Most Active Clients".
- Updating type definitions for `Product` and `Client` to support these new features.
- Expanding Portuguese and English localization files with new terms related to these enhancements.

--- a/locales/en.json
+++ b/locales/en.json
@@ -56,7 +56,13 @@
     "pendingPayable": "Accounts Payable (Pending)",
     "pendingReceivable": "Accounts Receivable (Pending)",
     "monthlyExpenses": "Expenses (Month)",
-    "monthlyProfit": "Profit (Month)"
+    "monthlyProfit": "Profit (Month)",
+    "averageTicket": "Average Ticket (Month)",
+    "bestSellingProducts": "Best-Selling Products (Month)",
+    "mostActiveClients": "Most Active Clients (Month)",
+    "vsLastMonth": "vs last month",
+    "noSalesLastMonth": "no data from last month",
+    "noData": "No data to display"
   },
   "employee": {
     "description": "The MEI can have a maximum of one employee. Manage the data here.",
@@ -316,7 +322,12 @@
     "grossProfit": "Gross Profit",
     "operatingExpenses": "Operating Expenses",
     "netProfit": "Net Profit",
-    "filterByDate": "Filter by Period"
+    "filterByDate": "Filter by Period",
+    "activeClientsReport": "Active Clients Report",
+    "activeClientsReportDescription": "Export a list of clients ranked by purchase value in a period.",
+    "totalPurchases": "Total Purchased",
+    "purchaseCount": "No. of Purchases",
+    "clientRank": "Rank"
   },
   "settings": {
     "general": "General Settings",
