feat: Add stock movement tracking
Introduces the StockMovement type and related functionality to track inventory changes. This includes:

- Defining the `StockMovement` and `StockMovementType` interfaces.
- Adding mock data for stock movements.
- Integrating stock movement state management into `App.tsx`.
- Enabling stock adjustment functionality in `ProductsPage.tsx` with a new modal and associated state.
- Updating `SalesPage.tsx` to accept `setCurrentPage` prop.

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,4 @@
 
-
 {
   "common": {
     "saveChanges": "Save Changes",
@@ -217,14 +216,22 @@
     "adjustStock": "Adjust Stock",
     "stockAdjustmentFor": "Adjust Stock for",
     "movementType": "Movement Type",
-    "stockInPurchase": "Stock-in (Purchase)",
-    "inventoryAdjustment": "Inventory Adjustment",
-    "lossDamage": "Loss/Damage",
+    "stockIn": "Stock-in (Purchase)",
+    "adjustment": "Inventory Adjustment",
+    "loss": "Loss/Damage",
     "newQuantity": "New Quantity",
     "currentStockIs": "Current Stock",
     "stockAfterIs": "Stock After Adjustment",
     "adjustmentReason": "Reason for Movement",
-    "stockAdjustSuccess": "Stock adjusted successfully!"
+    "stockAdjustSuccess": "Stock adjusted successfully!",
+    "history": "History",
+    "movementHistoryFor": "Movement History for",
+    "date": "Date",
+    "user": "User",
+    "reason": "Reason",
+    "entrada": "Stock-in",
+    "ajuste": "Adjustment",
+    "perda": "Loss"
   },
   "services": {
     "serviceRegistry": "Services",
@@ -379,7 +386,8 @@
     "surplus": "Surplus",
     "shortage": "Shortage",
     "confirmCloseCash": "Confirm Closing",
-    "cashClosedSuccess": "Cash register closed successfully!"
+    "cashClosedSuccess": "Cash register closed successfully!",
+    "operationCanceled": "Operation canceled. Returning to dashboard."
   },
   "financial": {
     "title": "Financial Management",
